--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -699,6 +699,7 @@ eng:
     incoming_payment_modes: "Incoming payment modes"
     incoming_payment_uses: "Incoming payment parts"
     incoming_payments: "Incoming payments"
+    # indicators: "Indicators"
     indirect_links: "Indirect links"
     initial_number: "Initial number"
     input_conveyors: "Input conveyors"
@@ -892,6 +893,7 @@ eng:
     prices: "Prices"
     printed_at: "Printed at"
     printed_on: "Printed on"
+    # process: "Process"
     producer: "Producer"
     product: "Product"
     product_categories: "Product categories"
@@ -1107,6 +1109,7 @@ eng:
     uses: "Uses"
     value: "Value"
     # value_format: "Format de la valeur monétaire"
+    # variety: "Variety"
     vat_number: "Vat number"
     vat_submissive: "Vat submissive"
     virtual: "Virtual"
