--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -320,8 +320,13 @@ fra:
       product_group: "Lot"
       product_group_event: "Évènement de groupe de produits"
       product_group_passing: "Passage d'un produit dans un groupe"
+      # product_indicator: "Product indicator"
+      # product_indicator_nature: "Product indicator nature"
+      # product_indicator_nature_choice: "Product indicator nature choice"
       product_nature: "Produit"
       product_nature_category: "Catégorie de produit"
+      # product_process: "Product process"
+      # product_process_phase: "Product process phase"
       product_specy: "Race" #?
       product_variety: "Race"
       production_chain: "Chaîne de production"
@@ -657,6 +662,7 @@ fra:
     incoming_payment_modes: "Modes d’encaissement"
     incoming_payment_uses: "Parties d’encaissement"
     incoming_payments: "Encaissements"
+    indicators: "Indicators"
     indirect_links: "Liens indirects"
     initial_number: "Numéro initial"
     input_conveyors: "Convoyeur entrant"
@@ -737,6 +743,9 @@ fra:
     maximal_grantable_reduction_percentage: "Pourcentage maximal autorisé à etre effectué"
     maximal_length: "Longueur maximale"
     maximal_value: "Valeur maximale"
+    # measure_unit: "Measure unit"
+    # measure_value: "Measure value"
+    # measured_at: "Measured at"
     min_duration: "Minute(s)"
     minimal_length: "Longueur minimale"
     minimal_value: "Valeur minimale"
@@ -818,6 +827,7 @@ fra:
     payments_to_deposit: "Encaissements à encaisser" #?
     payments_to_deposit_accounts: "Comptes des encaissements à encaisser"
     period: "Périodicité"
+    # phase_delay: "Phase delay"
     phones: "Téléphones"
     photo: "Photo"
     physical: "Personne physique"
@@ -841,6 +851,8 @@ fra:
     prices: "Prix"
     printed_at: "Imprimé le"
     printed_on: "Datée du"
+    process: "Process"
+    # processes: "Processes"
     producer: "Producteur"
     product: "Produit"
     product_categories: "Catégories de produit" #?
@@ -902,6 +914,7 @@ fra:
     reflections: "Reflections"
     relative_humidity: "Humidité relative"
     remaining_duration: "Durée d’utilisation prévue (heures)"
+    # repeatable: "Repeatable"
     reproductor: "Reproducteur"
     required: "Obligatoire"
     reservoir: "Réservoir"
@@ -1041,7 +1054,7 @@ fra:
     uses: "Matériels utilisés"
     value: "Valeur"
     value_format: "Format de la valeur monétaire" #?
-    # variety: "Variety"
+    variety: "Variety"
     vat_number: "Numéro de TVA intra-communautaire"
     vat_submissive: "Soumis à la TVA"
     virtual: "Virtuel"
