--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -660,6 +660,7 @@ spa:
     # incoming_payment_modes: "Modes d’encaissement"
     # incoming_payment_uses: "Parties d’encaissement"
     # incoming_payments: "Encaissements"
+    # indicators: "Indicators"
     # indirect_links: "Liens indirects"
     # initial_number: "Numéro initial"
     # input_conveyors: "Convoyeur entrant"
@@ -844,6 +845,7 @@ spa:
     # prices: "Prix"
     # printed_at: "Imprimé le"
     # printed_on: "Datée du"
+    # process: "Process"
     # producer: "Producteur"
     # product: "Produit"
     # product_categories: "Catégories de produit"
@@ -1043,6 +1045,7 @@ spa:
     # uses: "Matériels utilisés"
     # value: "Valeur"
     # value_format: "Format de la valeur monétaire"
+    # variety: "Variety"
     # vat_number: "Numéro de TVA intra-communautaire"
     # vat_submissive: "Soumis à la TVA"
     # virtual: "Virtuel"
