--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -661,6 +661,7 @@ jpn:
     # incoming_payment_modes: "Modes d’encaissement"
     # incoming_payment_uses: "Parties d’encaissement"
     # incoming_payments: "Encaissements"
+    # indicators: "Indicators"
     # indirect_links: "Liens indirects"
     # initial_number: "Numéro initial"
     # input_conveyors: "Convoyeur entrant"
@@ -846,6 +847,7 @@ jpn:
     # prices: "Prix"
     # printed_at: "Imprimé le"
     # printed_on: "Datée du"
+    # process: "Process"
     # producer: "Producteur"
     # product: "Produit"
     # product_categories: "Catégories de produit"
@@ -1046,6 +1048,7 @@ jpn:
     # uses: "Matériels utilisés"
     # value: "Valeur"
     # value_format: "Format de la valeur monétaire"
+    # variety: "Variety"
     # vat_number: "Numéro de TVA intra-communautaire"
     # vat_submissive: "Soumis à la TVA"
     # virtual: "Virtuel"
