--- a/config/locales/fra/prints/sales_order.xml
+++ b/config/locales/fra/prints/sales_order.xml
@@ -38,7 +38,7 @@
       </part>
       
       <table collection="sales_order.lines" fixed="true">
-        <column label="Code" property="product/code" width="20mm" align="center"/>
+        <column label="Code" property="product/number" width="20mm" align="center"/>
         <column label="Désignation" property="designation" width="80mm"/>
         <column label="Qté." property="quantity" width="13mm" numeric="money"/>
         <column label="Prix unitaire Hors Taxes" property="price/pretax_amount" width="22mm" numeric="money"/>
