Fixes "syntax" bug on boolean test in sale and product

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -34,7 +34,11 @@ arb:
     animal_races: #?
     animal_treatment_uses: #?
     animal_treatments: #?
-    animals: #?
+    animals:
+      # edit: "Modifier l'animal\_: %{name}"
+      # index: "Liste des animaux"
+      # new: "Nouvel animal"
+      # show: "Animal\_: %{name}"
     application: #?
     areas:
       edit: "تعديل العنوان البريدي : %{name}"
@@ -362,7 +366,7 @@ arb:
     product_group_passings: #?
     product_groups:
       # edit: "Modifier le lot\_: %{name} "
-      # index: "Lots d'animaux"
+      # index: "Lots de produits"
       # new: "Créer un lot"
       # show: "Lot\_: %{name}"
     product_indicator_nature_choices: #?
@@ -645,7 +649,7 @@ arb:
     # preferences: "Préférences"
     prices: "الاسعار"
     product_categories: "فئات المنتج" #?
-    # product_groups: "Lot d'Animaux"
+    # product_groups: "Lot de produits"
     product_nature: "المنتجات" #?
     product_nature_categories: "فئات المنتج"
     # product_nature_components: "Composants de produits"
@@ -736,6 +740,7 @@ arb:
     # add_fax: "Ajouter un n° de fax"
     # add_mail: "Ajouter une adresse postale"
     # add_mobile: "Ajouter un n° de portable"
+    # add_passage: "Ajouter un produit"
     add_payment: "اضافة دفعة"
     # add_phone: "Ajouter un n° de téléphone"
     # add_posology: "Ajouter une posologie"
