--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -227,8 +227,8 @@ arb:
       edit: "تعديل طريقة الدفعة: %{name}"
       index: "طرق تسديد الدفعات"
       new: "اضافة طريقة جديدة لتسديد الفعة"
-    incoming_payment_uses:
-      new: "اضافة دفعة جديدة  : %{type} رقم %{number}"
+    incoming_payment_uses:  #?
+      new: "اضافة دفعة جديدة  : %{type} رقم %{number}" #?
     incoming_payments:
       edit: "تعديل دفعة رقم%{number}"
       index: "الدفعات"
@@ -331,8 +331,8 @@ arb:
       edit: "تعديل طريقة تسديد الفعة"
       index: "طرق تسديد الدفعات"
       new: "اضافة طريقة تسديد الدفعة"
-    outgoing_payment_uses:
-      new: "تسديد الشراء رقم%{number}"
+    outgoing_payment_uses:  #?
+      new: "تسديد الشراء رقم%{number}" #?
     outgoing_payments:
       edit: "تعديل دفعة : %{number}"
       index: "دفعات"
@@ -618,7 +618,6 @@ arb:
     # incoming_delivery_lines: "Lignes de livraison entrante"
     # incoming_delivery_modes: "Modes de réception d’arrivage"
     incoming_payment_modes: "طرق تسديد الدفعات"
-    # incoming_payment_uses: "Utilisation d’encaissement"
     incoming_payments: "الدفعات"
     # interfacers: "Interfaceurs"
     inventories: "الجرد"
@@ -644,7 +643,6 @@ arb:
     # outgoing_delivery_lines: "Lignes de livraisons sortantes"
     outgoing_delivery_modes: "وسائل التسليم"
     outgoing_payment_modes: "طرق تسديد الدفعات"
-    # outgoing_payment_uses: "Utilisations des décaissements"
     outgoing_payments: "دفعات"
     # preferences: "Préférences"
     prices: "الاسعار"
