--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -281,6 +281,7 @@ fra:
       custom_field: "Champ complémentaire"
       custom_field_choice: "Choix de champ complémentaire"
       custom_field_datum: "Donnée complémentaire de fiche"
+      # deal_group: "Deal group"
       delay: "Délai"
       department: "Service"
       deposit: "Remise en banque"
@@ -306,7 +307,7 @@ fra:
       incoming_delivery_mode: "Mode d’arrivage"
       incoming_payment: "Encaissement"
       incoming_payment_mode: "Mode d’encaissement"
-      incoming_payment_use: "Affectation d’encaissement"
+      incoming_payment_use: "Affectation d’encaissement" #?
       inventory: "Inventaire"
       inventory_line: "Ligne d’inventaire"
       journal: "Journal"
@@ -331,7 +332,7 @@ fra:
       outgoing_delivery_mode: "Mode de livraison"
       outgoing_payment: "Décaissement"
       outgoing_payment_mode: "Mode de décaissement"
-      outgoing_payment_use: "Affectation de décaissement"
+      outgoing_payment_use: "Affectation de décaissement" #?
       # place: "Place"
       preference: "Préférence"
       price: "Prix"
@@ -490,6 +491,7 @@ fra:
     clients: "Clients"
     closable_financial_year: "Exercice clôturable"
     closed: "Clôturé"
+    # closed_at: "Closed at"
     closed_on: "Date de clôture"
     code: "Code"
     code2: "Code secondaire" #?
@@ -648,8 +650,8 @@ fra:
     event_natures: "Types d’évènement" #?
     events: "Évènements"
     examinated_at: "Examiné le" #?
-    expense: "Dépense"
-    expense_type: "Type de dépense"
+    expense: "Dépense" #?
+    expense_type: "Type de dépense" #?
     expenses: "Dépenses"
     expiration: "Délai d’expiration du devis"
     expired_on: "Date d’expiration"
@@ -767,7 +769,7 @@ fra:
     locked: "Verrouillé"
     log: "Journal d'évènements"
     loggable: "Peut se connecter"
-    lost: "En perte"
+    lost: "En perte" #?
     luminance: "Luminosité" #?
     mail: "E-mail"
     mail_addresses: "Adresses postales"
@@ -866,19 +868,19 @@ fra:
     parent_land_parcel: "Sur-îlot"
     parts: "Affectations" #?
     parts_amount: "Montant utilisé" #?
-    passages: "Passages"
+    passages: "Passages" #?
     password: "Mot de passe"
     password_confirmation: "Confirmation du mot de passe"
     payee: "Bénéficiaire"
     payer: "Payeur"
-    payment: "Décaissement"
+    payment: "Décaissement" #?
     payment_delay: "Délai d’encaissement"
     payment_mode: "Mode d’encaissement"
     payment_mode_complement: "Complément d’information sur le mode d’encaissement"
     payment_modes: "Modes d’encaissement" #?
     payment_on: "A régler au plus tard le"
     payment_uses: "Parties d’encaissement"
-    payment_way: "Mode de décaissement"
+    payment_way: "Mode de décaissement" #?
     payments: "Encaissements"
     payments_count: "Nb. encaissements"
     payments_to_deposit: "Encaissements à encaisser" #?
@@ -1115,7 +1117,7 @@ fra:
     usable_outgoing_payments: "Décaissements utilisables"
     usage: "Utilisation"
     usage_duration: "Durée d’utilisation (heures)"
-    used_amount: "Montant utilisé"
+    used_amount: "Montant utilisé" #?
     used_with: "Used with"
     useful_lines: "Lignes utiles"
     user: "Utilisateur"
@@ -1458,7 +1460,7 @@ fra:
     incoming_payment:
       bookkeep: "[%{resource} %{number}] %{mode} %{check_number} de %{payer} (%{expenses})"
       label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} en %{mode} de %{payer}"
-    incoming_payment_use:
+    incoming_payment_use: #?
       bookkeep: "[%{resource}] %{mode} (%{payment_number}) reçu de %{attorney} pour %{client} (%{expense_number})"
     inventory_line:
       inventory: "Inventaire "
@@ -1515,7 +1517,7 @@ fra:
     outgoing_payment:
       bookkeep: "[%{resource} %{number}] %{mode} %{check_number} pour %{payee} (%{expenses})"
       label: "%{number}. %{amount} (%{usable_amount} restants) du %{date} en %{mode} pour %{payee}"
-    outgoing_payment_use:
+    outgoing_payment_use: #?
       bookkeep: "[%{resource}] %{mode} (%{payment_number}) reçu par %{attorney} pour %{supplier} (%{expense_number})"
     price:
       label: "%{product} / %{amount} %{currency}"
