Replaces Delay AR with Delay class and its expressions

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -700,6 +700,7 @@ eng:
     expense_type: "Expense type"
     expenses: "Expenses"
     expiration: "Expiration"
+    # expiration_delay: "Expiration delay"
     expired_on: "Expired on"
     exportable: "Exportable"
     exportable_columns: "Exportable columns"
