--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -665,6 +665,7 @@ spa:
     # expense_type: "Type de dépense"
     # expenses: "Dépenses"
     # expiration: "Délai d’expiration du devis"
+    # expiration_delay: "Expiration delay"
     # expired_on: "Date d’expiration"
     # exportable: "Exportable"
     # exportable_columns: "Colonnes exportables"
