--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -100,11 +100,7 @@ jpn:
       # stocks: "Tableau de bord des stocks"
       # trade: "Tableau de bord de la gestion commerciale"
       # welcome: "Bienvenue dans Ekylibre"
-    delays:
-      # edit: "Modifier le délai\_: %{name}"
-      # index: "Délais"
-      # new: "Ajout d’un nouveau délai"
-      # show: "Délai\_: %{name}"
+    delays: #?
     departments:
       # edit: "Modifier le service\_: %{name}"
       # index: "Services"
@@ -519,7 +515,6 @@ jpn:
     # custom_field_data: "Données de champs personnalisés"
     # custom_fields: "Champs personnalisés"
     # dashboards: "Tableaux de bord"
-    # delays: "Délais"
     # departments: "Services"
     # deposit_items: "Lignes de remise en banque"
     # deposits: "Remises en banque"
